--- a/OpenCV-Notebooks/IntroductionToOpenCV.ipynb
+++ b/OpenCV-Notebooks/IntroductionToOpenCV.ipynb
@@ -6,7 +6,7 @@
       "name": "IntroductionToOpenCV.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNGsvvifATxT78ZcO42ovUP",
+      "authorship_tag": "ABX9TyNZzLoWLrZ9uURAhzh6vvMz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -163,9 +163,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 347
+          "height": 102
         },
-        "outputId": "65342a82-786f-48b8-8521-fbf27dd2f9f9"
+        "outputId": "cb60da2e-cac5-4e62-dee0-5355a1cd1815"
       },
       "source": [
         "img_path = '/content/DataFolder/colab-images/minions1.jpg'\n",
@@ -182,6 +182,35 @@
         "\n",
         "print(\"Thus we have %r rows, %r columns and %r channels in the image\"%(rows,cols,ch))\n",
         "\n",
+        "\n"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Shape of the image :\n",
+            "(683, 1024, 3)\n",
+            "Why is it a 3D matrix ? \n",
+            "The BGR image consists of 3 channels of 2D images stacked together\n",
+            "Thus we have 683 rows, 1024 columns and 3 channels in the image\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RAqirLHfVH2n",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 262
+        },
+        "outputId": "129906e0-fa88-43a8-a59d-6d4198e1832e"
+      },
+      "source": [
         "\n",
         "# Cool ! now let's convert the BGR image to RGB\n",
         "# First using OpenCV method \n",
@@ -203,21 +232,10 @@
         "ax1.title.set_text('BGR image imported in Opencv')\n",
         "ax2.title.set_text('BGR to RGB using OpenCV')\n",
         "ax3.title.set_text('BGR to RGB using numpy ')\n",
-        "plt.show(block=True)\n"
+        "plt.show(block=True)"
       ],
-      "execution_count": 25,
+      "execution_count": 27,
       "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Shape of the image :\n",
-            "(683, 1024, 3)\n",
-            "Why is it a 3D matrix ? \n",
-            "The BGR image consists of 3 channels of 2D images stacked together\n",
-            "Thus we have 683 rows, 1024 columns and 3 channels in the image\n"
-          ],
-          "name": "stdout"
-        },
         {
           "output_type": "display_data",
           "data": {
